--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="icon" type="image/png" href="https://www.pngkit.com/png/full/189-1897587_hand-svg-black-and-white-hand-white-icon.png" />
+
+    <title>Yourdev</title>
   </head>
   <body>
     <div id="root"></div>
